Item 9422 : Naming patterns for Aliquots in UI